updated overflow issue on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -49,12 +49,15 @@ $global_contrast_color:black;
 // styles
 // -----------------------------------------------------------------
 html, body {
-    height: 100%;
+    height: auto;
     width: 100vw;
     margin:0px;
     padding:0px;
     background-color: $global_bg_color;
+    overflow-x: hidden;
 }
+
+
 // header_desktop
 @media screen and (min-width:1200px) {
 header {
@@ -89,6 +92,7 @@ header {
         display: flex;
         justify-content: start;
         background-color: black;
+        
     
         img {
             height: 20vh;
